<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_origem_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remetente"/>
    <EditText
        android:id="@+id/et_origem_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_destino_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destinatario"/>
    <EditText
        android:id="@+id/et_destino_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_assunto_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assunto"/>
    <EditText
        android:id="@+id/et_assunto_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/assunto_hint"/>
    <TextView
        android:id="@+id/tv_corpo_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensagem"/>
    <EditText
        android:id="@+id/et_corpo_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mensagem_hint"/>
    <Button
        android:id="@+id/bt_enviarmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btenviar"/>

</LinearLayout>
