<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_origem_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remetente"/>
    <EditText
        android:id="@+id/et_origem_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_destino_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destinatario"/>
    <EditText
        android:id="@+id/et_destino_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_ultima_mensagem_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultima_mensagem"/>
    <EditText
        android:id="@+id/et_ultima_mensagem_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/bt_ler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btvisualizar"/>

</LinearLayout>
